--- a/main.tex
+++ b/main.tex
@@ -115,7 +115,7 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {University of Pennsylvania}{May 2023}
+      {University of Pennsylvania}{\textit{exp. }May 2023}
       {\footnotesize Master of Computer and Information Technology}
       \resumeItemListStart
         \resumeItem{\textit{Ongoing \& Prospective Coursework}: Data Structures, Algorithms, Web Development, Database Management, Machine Learning, Theory of Computation, Computer Architecture, Operating Systems, Internet and Web Systems}
@@ -138,16 +138,16 @@
       {Software Engineer Intern}
       \resumeItemListStart
         \resumeItem{Deployed WebAssembly functions to AWS Lambda and Tencent SCF by containerizing the open source WebAssembly runtime WasmEdge with Docker; wrote a tech article published on Cloud Native Computing Foundation's blog}
-        \resumeItem{Improved documentation for Serverless Reactor, a FaaS platform for chatbots; created a Slack chatbot prototype with Rust to showcase convenience of deploying a customized chatbot through the platform}
-        \resumeItem{Researched on integration of WasmEdge in smart cars using tools from the Erdos Project and containerization of WebAssembly applications using CRI-O}
+        \resumeItem{Improved documentation for Serverless Reactor, a FaaS platform for chatbots; created a Slack chatbot prototype with Rust to showcase convenience of deploying a customized chatbot using the platform}
+        \resumeItem{Researched on integration of WasmEdge in smart cars (with tools from the Erdos Project) and containerization of WebAssembly applications (with CRI-O)}
       \resumeItemListEnd
 
     \resumeSubheading
       {ByteDance}{Dec. 2020 -- Apr. 2021}
       {Strategy Analyst Intern}
       \resumeItemListStart
-        \resumeItem{Designed credit system for TikTok advertisers and validated system using data analysis and visualization tools (Jupyter, Pandas, Matplotlib, Seaborn); presented credit system to product, operation, and sales teams}
-        \resumeItem{Conducted quantitative analysis of potential risk factors in TikTok advertising ecosystem; provided risk-control strategies and worked with product and operation teams on implementation}
+        \resumeItem{Worked with engineering team on designing credit system for TikTok advertisers; validated system using data analysis and visualization tools (Jupyter, Pandas, Matplotlib) and presented it to product, operations, and sales teams}
+        \resumeItem{Detected features that mark off rogue actors in TikTok's ad ecosystem through quantitative analysis; provided risk-control strategies and worked with engineering, product, and operations teams on implementation}
         \resumeItem{Drafted and presented data report on risk overview in weekly meetings with sales teams in the US and Europe; supported them in achieving bi-monthly risk-control goals}
         \resumeItem{Designed and straightened out risk-control metrics based on business needs; built monitoring  dashboards for metrics to improve team’s data-analytical capacity}
     \resumeItemListEnd
@@ -158,7 +158,7 @@
       \resumeItemListStart
         \resumeItem{Developed web-scraping tool for deal-sourcing platforms with Python (Selenium, Requests, Beautiful Soup), used regularly by analysts and helped to identify 1 out of 15 start-ups invested by MiraclePlus in Fall 2020 round}
         \resumeItem{Scraped and analyzed data on founders and funding information of Chinese unicorn start-ups and researched on HR SaaS and car battery recycling; produced 3 in-depth reports}
-        \resumeItem{Sourced 400+ start-ups through Wechat, cold calls, and automated emails sent through Python scripts; convinced 90+ start-ups to apply to MiraclePlus in Fall 2020 round}
+        \resumeItem{Developed Python script that scrapes and sends emails to start-ups automatically; sourced 400+ start-ups and convinced 90+ start-ups to apply to MiraclePlus in Fall 2020 round}
     \resumeItemListEnd
 
     \resumeSubheading
@@ -197,7 +197,7 @@
     \small{\item{
     \vspace{2pt}
      \textbf{\color{emph} Languages}{: Python, Java, C, JavaScript, HTML/CSS, Rust, R, Shell} \\
-     \textbf{\color{emph} Tools}{: Git, Linux, AWS Lambda, Docker, Node.js, React, Selenium} \\
+     \textbf{\color{emph} Tools}{: Git, Linux, AWS Lambda, Docker, Node.js, React, Cypress} \\
      \textbf{\color{emph} Big Data}{: SQL, MongoDB, Pandas, Jupyter, Matplotlib, Seaborn}
     }}
  \end{itemize}
