--- a/main.tex
+++ b/main.tex
@@ -187,11 +187,11 @@
   \resumeSubHeadingListStart
 
     \resumeProjectHeading
-      {\positionItem{Group-Based Social Network APP} \techStack{React, Express, Figma}}{Sep. 2021 -- Present}
+      {\positionItem{Full-Stack Web Application} \techStack{React, Express, MongoDB, Heroku}}{Sep. 2021 -- Present}
       \resumeItemListStart
-        \resumeItem{Worked on creating Reddit-like social network website in team of 4 under the Scrum framework}
-        \resumeItem{Drafted team agreement and best practices; designed wireframes with Figma and RESTful API with SwaggerHub}
-        \resumeItem{Implemented front-end with React, MUI, and Redux; wrote unit tests with Jest and end-to-end tests with Cypress}
+        \resumeItem{Created Reddit-like social network website in team of 4 under the Scrum framework and deployed through Heroku}
+        \resumeItem{Built front-end with React \& MUI and back-end with Express \& MongoDB; tested with Jest and Cypress}
+        \resumeItem{Independently implemented in-APP synchronous chatting that supports images, audio, and video; built the feature through polling, file streaming with Multer, and file storage with MongoDB GridFS}
       \resumeItemListEnd
 
     \resumeProjectHeading
