Updates from Overleaf

--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -193,7 +193,7 @@
       \resumeItemListEnd
 
     \resumeProjectHeading
-      {\positionItem{Educational Wechat Mini-APP} \techStack{JavaScript, HTML, CSS, Tencent Cloud Functions}}{Apr. 2020 -- Jul. 2020}
+      {\positionItem{Educational Wechat Mini-APP} \techStack{SpringBoot, React}}{Apr. 2020 -- Jul. 2020}
       \resumeItemListStart
         \resumeItem{Designed and developed Wechat Mini-APP for Project Nous, an education NGO; frequently used by 40+ volunteers and 200+ students for program application, admission, and course registration}
         \resumeItem{Built front-end with JavaScript, HTML, and CSS, and used Tencent Cloud Function for back-end and database management; collaborated in team of 4 through GitHub and Slack}
